; ModuleID = '/home/carl/AnghaBench/winfile/src/extr_wffile.c_WFSetAttr.c'
source_filename = "/home/carl/AnghaBench/winfile/src/extr_wffile.c_WFSetAttr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ATTR_COMPRESSED = common dso_local global i32 0, align 4
@ATTR_ENCRYPTED = common dso_local global i32 0, align 4
@FSC_ATTRIBUTES = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @WFSetAttr(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %6 = load i32, i32* %4, align 4
  %7 = load i32, i32* @ATTR_COMPRESSED, align 4
  %8 = load i32, i32* @ATTR_ENCRYPTED, align 4
  %9 = or i32 %7, %8
  %10 = xor i32 %9, -1
  %11 = and i32 %6, %10
  store i32 %11, i32* %4, align 4
  %12 = load i32, i32* %3, align 4
  %13 = load i32, i32* %4, align 4
  %14 = call i64 @SetFileAttributes(i32 %12, i32 %13)
  store i64 %14, i64* %5, align 8
  %15 = load i64, i64* %5, align 8
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %21

17:                                               ; preds = %2
  %18 = load i32, i32* @FSC_ATTRIBUTES, align 4
  %19 = load i32, i32* %3, align 4
  %20 = call i32 @ChangeFileSystem(i32 %18, i32 %19, i32* null)
  br label %21

21:                                               ; preds = %17, %2
  %22 = load i64, i64* %5, align 8
  %23 = icmp ne i64 %22, 0
  %24 = xor i1 %23, true
  %25 = zext i1 %24 to i32
  %26 = sext i32 %25 to i64
  ret i64 %26
}

declare dso_local i64 @SetFileAttributes(i32, i32) #1

declare dso_local i32 @ChangeFileSystem(i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
